@startuml

Alumno o--- Materia : aprobadas
Inscripcion --> "1" Alumno : alumno
Inscripcion --> "1..*" Materia : materias \n(Materias a las que se inscribe)
Materia --> "0..*" Materia : correlativas

class Inscripcion {
-alumno: Alumno
-materias: Set<Materia>

+boolean aprobada()
}

class Alumno {
-Set<Materia> aprobadas
+boolean aproboMateria(Materia)
}

class Materia {
-Set<Materia> correlativas
+boolean cumpleCorrelativas(Alumno)
}

@enduml
